# adb-school-optimize

./: .gitignore  LICENSE  README.md  aqi_dask.py  requirements.txt  score_calculations.ipynb  test_plot.ipynb
apps/web/: README.md  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: CountrySchoolExplorer.tsx  DashboardPageShell.tsx  DashboardShell.tsx  DistrictExplorer.tsx  DistrictMap.tsx  DistrictScoreLegend.tsx  MapScreenshotControl.tsx  MethodologyPanel.tsx  ScenarioPanel.tsx  SchoolExplorer.tsx  SchoolMap.tsx  ScoreLegend.tsx
apps/web/lib/: api.ts  color.ts  districtIndicatorPalette.ts  districtScores.ts  scenarioSelection.ts  scenarioWeights.ts  types.ts
docs/: architecture.md
infra/cloud-run/: README.md
infra/sql/: 001_core_schema.sql
infra/vercel/: README.md
services/api/: .env.example  Dockerfile  README.md  SUPABASE_FASTAPI_SETUP.md  pyproject.toml
services/api/app/: __init__.py  db.py  errors.py  main.py  queries.py  raster_keys.py  repository.py  settings.py
services/api/app/ingestion/: __init__.py  load_core_data.py  mappings.py  seed_default_scenario.py
services/api/app/models/: __init__.py  api.py
services/api/app/routers/: districts.py  exports.py  meta.py  rasters.py  scenarios.py  schools.py  scoring.py
services/api/app/services/: __init__.py  rasters.py
services/api/rise_png_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/api/scripts/: run_api.sh
services/api/tests/: conftest.py  test_api.py  test_ingestion_aux_layers.py  test_raster_cache.py
(+5 files in other folders)
