[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rise-png-api"
version = "0.1.0"
description = "FastAPI backend for the RISE-PNG dashboard."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "psycopg[binary]",
    "pandas",
    "shapely",
    "openpyxl",
    "python-multipart",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

